
syntax = "proto3";

package cms;

option java_package = "com.cms";
option cc_enable_arenas = true;

// A 128-bit id, transferred as two 64-bit longs
message Uuid {
    sint64 least_significant_bits = 1;
    sint64 most_significant_bits = 2;
}

message Order {
	bool asc = 1;
	string property = 2;	
}

message Page {
	uint32 page = 1;
	uint32 elements =2;
}

message Query {
	repeated Order order =  1;
	repeated Page page = 2;
}

message Filter {
	optional string by = 1;
	optional Order order = 2; 
}

message CmdResponse {
	enum Level {
    	DEBUG = 0;
    	INFO = 1;
    	WARN = 2;
    	ERROR = 3;
  	}

  	string path = 1;
  	Level level = 2;
  	string info = 3;
}

message Content {
	Uuid id = 1;
	string title = 2;
	string description = 3;
	optional uint32 creation_timestamp = 4;
	optional uint32 updated_timestamp = 5;
}

message ContentList {
	repeated Content contents = 1;
}

service CmsQuery {
  rpc get (Uuid) returns (Content){}
  rpc get_all (Query) returns (ContentList){}
}

service ContentCmdHandler {
	rpc create (Content) returns (CmdResponse){}
}


// event source

message Event {
	Uuid aggregateId = 1;
	uint32 version = 2;
	string data = 3;
	EventType type = 4;
}

message EventType {
	string type = 1;
}

message EventListener {
	EventType type = 1;
	string endpoint_address = 2;
}

service EventListenerEndpoint {
	// should be void
	rpc on (Event) returns (CmdResponse){}
}

service EventSource {
	
	rpc apply (Event) returns (CmdResponse){}
	
	rpc subscribe (EventListener) returns (CmdResponse){}
	rpc unsubscribe (EventListener) returns (CmdResponse){}
}

 // aggregate

message Aggregate {
	Uuid aggregateId = 1;
	uint32 version = 2;
	string data = 3;
	EventListener listener = 4;
}

service AggregateRepository {
	// get and lock the aggregate
	rpc get (Uuid) returns (Aggregate){}
	
	// set and unlock the aggregate
	rpc set (Aggregate) returns (CmdResponse){}
}



